Refactor batch photo update to use a Map for payload and improve error handling